Fix main margins on mobile

--- a/styles/core.css
+++ b/styles/core.css
@@ -144,7 +144,10 @@ h2 {
 
 @media (max-width: 768px) {
     .bio-container {
+        max-width: calc(100vw - 2rem);
+        margin: 1rem;
         padding: 1rem;
+        min-height: calc(100vh - 2rem);
     }
     
     .profile-image {
